third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/enum_assoc.stderr
error: unsupported self type; C++ does not allow member functions on enums
 --> tests/ui/enum_assoc.rs:7:18
  |
7 |         #[Self = "Enum"]
  |                  ^^^^^^
