third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/enum_assoc.rs
#[cxx::bridge]
mod ffi {
    enum Enum {
        Variant,
    }
    extern "Rust" {
        #[Self = "Enum"]
        fn f();
    }
}

impl ffi::Enum {
    fn f() {}
}

fn main() {}
